# rust-cmd-practice

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: test.yml
hello/: Cargo.toml
hello/src/: main.rs
hello/tests/: cli.rs
rcat/: Cargo.toml
rcat/src/: lib.rs  main.rs
rcat/tests/: main.rs
rcat/tests/inputs/: multi.txt  multi_with_blank.txt  single.txt
recho/: Cargo.toml
recho/src/: main.rs
recho/tests/: main.rs
rhead/: Cargo.toml
rhead/src/: lib.rs  main.rs
rhead/tests/: main.rs
rhead/tests/inputs/: multi.txt  multi_with_blank.txt  single.txt
