[package]
name = "recho"
version = "0.1.0"
edition = "2021"
authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
description = "echo command but implemented in The Rust language"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.0", features = ["derive"]}

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
